# webcam_launcher

./: README.md
face_detect/: CMakeLists.txt  README.md  package.xml
face_detect/src/: main.cpp
hog_detector/: CMakeLists.txt  package.xml
hog_detector/src/: main.cpp
launch/: elp.launch
webcam-launcher/: CMakeLists.txt
webcam_launcher/: CMakeLists.txt  package.xml
